# ruvents_test_task

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
xls_handler/: dates_calculator.py  numbers_calculator.py  xls_handler.py
